--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "bluenodejs",
+  "name": "jxbluenodejs",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "start": "ng serve --host 0.0.0.0 --port 8080 --disable-host-check", 
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
