--- a/charts/jxbluenodejs/values.yaml
+++ b/charts/jxbluenodejs/values.yaml
@@ -27,15 +27,15 @@ canary:
   enabled: false
   progressDeadlineSeconds: 60
   canaryAnalysis:
-    interval: "1m"
-    threshold: 5
+    interval: "5m"
+    threshold: 2
     maxWeight: 60
     stepWeight: 20
     # WARNING: Canary deployments will fail and rollback if there is no traffic that will generate the below specified metrics.
     metrics:
       requestSuccessRate:
-        threshold: 99
-        interval: "1m"
+        threshold: 20
+        interval: "5m"
       requestDuration:
         threshold: 1000
         interval: "1m"
@@ -53,14 +53,14 @@ service:
     fabric8.io/ingress.annotations: "kubernetes.io/ingress.class: nginx"
 resources:
   limits:
-    cpu: 400m
+    cpu: 1000m
     memory: 512Mi
   requests:
-    cpu: 200m
-    memory: 128Mi
+    cpu: 1000m
+    memory: 380Mi
 probePath: /
 livenessProbe:
-  initialDelaySeconds: 60
+  initialDelaySeconds: 120
   periodSeconds: 10
   successThreshold: 1
   timeoutSeconds: 1
@@ -79,13 +79,13 @@ ingress:
 # values we use from the `jx-requirements.yml` file if we are using helmfile and helm 3
 jxRequirements:
   ingress:
-    domain: ""
-    externalDNS: false
+    domain: "k8s.fail"
+    externalDNS: true
     namespaceSubDomain: -jx.
     tls:
-      email: ""
-      enabled: false
-      production: false
+      email: "pslacl35@hotmail.com"
+      enabled: true
+      production: true
 
     # For Kubernetes v1.14+, use 'networking.k8s.io/v1beta1'
     apiVersion: "extensions/v1beta1"
