--- a/charts/jxbluenodejs/values.yaml
+++ b/charts/jxbluenodejs/values.yaml
@@ -60,7 +60,7 @@ resources:
     memory: 512Mi
 probePath: /
 livenessProbe:
-  initialDelaySeconds: 120
+  initialDelaySeconds: 60
   periodSeconds: 10
   successThreshold: 1
   timeoutSeconds: 1
@@ -79,13 +79,13 @@ ingress:
 # values we use from the `jx-requirements.yml` file if we are using helmfile and helm 3
 jxRequirements:
   ingress:
-    domain: "k8s.fail"
-    externalDNS: true
+    domain: ""
+    externalDNS: false
     namespaceSubDomain: -jx.
     tls:
-      email: "pslacl35@hotmail.com"
-      enabled: true
-      production: true
+      email: ""
+      enabled: false
+      production: false
 
     # For Kubernetes v1.14+, use 'networking.k8s.io/v1beta1'
     apiVersion: "extensions/v1beta1"
